Don't generate MD5 hash for files bigger than 10MB

This hash is used only for logging, so there is no reason for spending
time on it.

We should probably consider total removing of this hash, since its
calculation for a 7MiB file takes about 10ms.

BUG:419238